# ChangeLog for games-board/gnocatan
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/gnocatan/Attic/ChangeLog,v 1.20 2004/10/17 15:43:07 rizzo Exp $

*gnocatan-0.8.1.39 (17 Oct 2004)

  17 Oct 2004; Don Seiler <rizzo@gentoo.org> +gnocatan-0.8.1.39.ebuild:
  Version bump

*gnocatan-0.8.1.38 (09 Oct 2004)

  09 Oct 2004; Don Seiler <rizzo@gentoo.org> +gnocatan-0.8.1.38.ebuild:
  Version bump

*gnocatan-0.8.1.37 (01 Oct 2004)

  01 Oct 2004; Don Seiler <rizzo@gentoo.org> +gnocatan-0.8.1.37.ebuild:
  Version bump, now allows for console-server-only builds.  Closes Bug #59935

*gnocatan-0.8.1.36 (26 Sep 2004)

  26 Sep 2004; Don Seiler <rizzo@gentoo.org> +gnocatan-0.8.1.36.ebuild:
  Version bump

  10 Sep 2004; Don Seiler <rizzo@gentoo.org>
  -files/gnocatan-reject_trade_2x.patch, -gnocatan-0.8.1.30-r1.ebuild,
  gnocatan-0.8.1.34.ebuild:
  0.8.1.34 stable on x86, removing old version

*gnocatan-0.8.1.34 (07 Sep 2004)

  07 Sep 2004; Don Seiler <rizzo@gentoo.org> -gnocatan-0.8.1.30.ebuild,
  +gnocatan-0.8.1.34.ebuild:
  Version bump for upstream released CVS snapshot

*gnocatan-0.8.1.30-r1 (23 Aug 2004)

  23 Aug 2004; Don Seiler <rizzo@gentoo.org>
  +files/gnocatan-reject_trade_2x.patch, +gnocatan-0.8.1.30-r1.ebuild:
  Patch for annoying crash when clicking 'Reject Trade' twice

  09 Aug 2004; Don Seiler <rizzo@gentoo.org> gnocatan-0.8.1.30.ebuild:
  Stable on x86

  16 Jul 2004; David Holm <dholm@gentoo.org> gnocatan-0.8.1.30.ebuild:
  Added to ~ppc.

*gnocatan-0.8.1.30 (08 Jul 2004)

  08 Jul 2004; Don Seiler <rizzo@gentoo.org> metadata.xml,
  +gnocatan-0.8.1.30.ebuild:
  Version bump

  02 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  gnocatan-0.8.1.16-r1.ebuild:
  remove G*_DISABLE_DEPRECATED from source to address bug #46447

  31 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  gnocatan-0.8.1.16-r1.ebuild:
  inherit eutils for epatch

*gnocatan-0.8.1.16-r1 (24 Feb 2004)
